--- a/c-api/function.po
+++ b/c-api/function.po
@@ -17,10 +17,10 @@ msgstr ""
 "Last-Translator: Rafael Fontenelle <rffontenelle@gmail.com>, 2024\n"
 "Language-Team: Portuguese (Brazil) (https://app.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pt_BR\n"
 "Plural-Forms: nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % "
 "1000000 == 0 ? 1 : 2;\n"
 
@@ -43,7 +43,7 @@ msgid ""
 "FunctionType``."
 msgstr ""
 "Esta é uma instância de :c:type:`PyTypeObject` e representa o tipo de função "
-"Python. Está exposto aos programadores Python como ``types.FunctionType``."
+"Python. Está exposta a programadores Python como ``types.FunctionType``."
 
 #: ../../c-api/function.rst:28
 msgid ""
@@ -59,7 +59,7 @@ msgid ""
 "*globals* must be a dictionary with the global variables accessible to the "
 "function."
 msgstr ""
-"Retorna um novo objeto função associado ao código objeto *code*. *globals* "
+"Retorna um novo objeto função associado ao objeto código *code*. *globals* "
 "deve ser um dicionário com as variáveis globais acessíveis à função."
 
 #: ../../c-api/function.rst:37
@@ -88,7 +88,7 @@ msgstr ""
 
 #: ../../c-api/function.rst:54
 msgid "Return the code object associated with the function object *op*."
-msgstr "Retorna o objeto de código associado ao objeto função *op*."
+msgstr "Retorna o objeto código associado ao objeto função *op*."
 
 #: ../../c-api/function.rst:59
 msgid "Return the globals dictionary associated with the function object *op*."
@@ -109,29 +109,29 @@ msgid ""
 "Return the argument default values of the function object *op*. This can be "
 "a tuple of arguments or ``NULL``."
 msgstr ""
-"Retorna o argumento os valores padrão do objeto função *op*. Isso pode ser "
-"uma tupla de argumentos ou ``NULL``."
+"Retorna os valores-padrão de argumentos do objeto função *op*. Pode ser uma "
+"tupla de argumentos ou ``NULL``."
 
 #: ../../c-api/function.rst:77
 msgid ""
 "Set the argument default values for the function object *op*. *defaults* "
 "must be ``Py_None`` or a tuple."
 msgstr ""
-"Define o argumento valores padrão para o objeto função *op*. *defaults* deve "
-"ser ``Py_None`` ou uma tupla."
+"Define os valores-padrão dos argumentos do objeto função *op*. *defaults* "
+"deve ser ``Py_None`` ou uma tupla."
 
 #: ../../c-api/function.rst:80 ../../c-api/function.rst:94
 #: ../../c-api/function.rst:108
 msgid "Raises :exc:`SystemError` and returns ``-1`` on failure."
-msgstr "Levanta :exc:`SystemError` e retorna ``-1`` em falha."
+msgstr "Levanta :exc:`SystemError` e retorna ``-1`` em caso de falha."
 
 #: ../../c-api/function.rst:85
 msgid ""
 "Return the closure associated with the function object *op*. This can be "
 "``NULL`` or a tuple of cell objects."
 msgstr ""
-"Retorna o fechamento associado ao objeto função *op*. Isso pode ser ``NULL`` "
-"ou uma tupla de objetos de célula."
+"Retorna o fechamento associado ao objeto função *op*. Pode ser ``NULL`` ou "
+"uma tupla de objetos célula."
 
 #: ../../c-api/function.rst:91
 msgid ""
