--- a/c-api/gcsupport.po
+++ b/c-api/gcsupport.po
@@ -17,10 +17,10 @@ msgstr ""
 "Last-Translator: Rafael Fontenelle <rffontenelle@gmail.com>, 2023\n"
 "Language-Team: Portuguese (Brazil) (https://app.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pt_BR\n"
 "Plural-Forms: nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % "
 "1000000 == 0 ? 1 : 2;\n"
 
@@ -52,10 +52,10 @@ msgid ""
 "instances of the type are mutable, a :c:member:`~PyTypeObject.tp_clear` "
 "implementation must also be provided."
 msgstr ""
-"Para criar um tipo container, o :c:member:`~PyTypeObject.tp_flags` campo do "
-"tipo do objeto deve incluir o :const:`Py_TPFLAGS_HAVE_GC`e fornecer uma "
+"Para criar um tipo contêiner, o :c:member:`~PyTypeObject.tp_flags` campo do "
+"tipo do objeto deve incluir o :const:`Py_TPFLAGS_HAVE_GC` e fornecer uma "
 "implementação do :c:member:`~PyTypeObject.tp_traverse` manipulador. Se as "
-"instâncias do tipo forem mutáveis, uma:c:member:`~PyTypeObject.tp_clear` "
+"instâncias do tipo forem mutáveis, uma :c:member:`~PyTypeObject.tp_clear` "
 "implementação também deverá ser fornecida."
 
 #: ../../c-api/gcsupport.rst:24
