--- a/c-api/init.po
+++ b/c-api/init.po
@@ -23,16 +23,16 @@ msgstr ""
 "Last-Translator: Rafael Fontenelle <rffontenelle@gmail.com>, 2024\n"
 "Language-Team: Portuguese (Brazil) (https://app.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pt_BR\n"
 "Plural-Forms: nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % "
 "1000000 == 0 ? 1 : 2;\n"
 
 #: ../../c-api/init.rst:8
 msgid "Initialization, Finalization, and Threads"
-msgstr "Inicialização, Finalização e Threads"
+msgstr "Inicialização, finalização e threads"
 
 #: ../../c-api/init.rst:10
 msgid "See also :ref:`Python Initialization Configuration <init-config>`."
@@ -41,7 +41,7 @@ msgstr ""
 
 #: ../../c-api/init.rst:15
 msgid "Before Python Initialization"
-msgstr "Antes da Inicialização do Python"
+msgstr "Antes da inicialização do Python"
 
 #: ../../c-api/init.rst:17
 msgid ""
@@ -64,7 +64,7 @@ msgstr ""
 
 #: ../../c-api/init.rst:24
 msgid "Configuration functions:"
-msgstr "Funções de Configuração"
+msgstr "Funções de configuração"
 
 #: ../../c-api/init.rst:26
 msgid ":c:func:`PyImport_AppendInittab`"
@@ -120,7 +120,7 @@ msgstr ":c:func:`PySys_ResetWarnOptions`"
 
 #: ../../c-api/init.rst:40
 msgid "Informative functions:"
-msgstr "Funções Informativas:"
+msgstr "Funções informativas:"
 
 #: ../../c-api/init.rst:42
 msgid ":c:func:`Py_IsInitialized`"
@@ -258,7 +258,7 @@ msgid ""
 "If set to non-zero, Python won't try to write ``.pyc`` files on the import "
 "of source modules."
 msgstr ""
-"Se definido como diferente de zero, o Python não tentará escrever arquivos "
+"Se definida como diferente de zero, o Python não tentará escrever arquivos "
 "``.pyc`` na importação de módulos fonte."
 
 #: ../../c-api/init.rst:105
@@ -386,7 +386,7 @@ msgstr ""
 
 #: ../../c-api/init.rst:172
 msgid "See :pep:`528` for more details."
-msgstr "Veja :pep:`528` para mais detalhes."
+msgstr "Veja a :pep:`528` para mais detalhes."
 
 #: ../../c-api/init.rst:178
 msgid ""
