--- a/faq/design.po
+++ b/faq/design.po
@@ -21,16 +21,16 @@ msgstr ""
 "Last-Translator: Rafael Fontenelle <rffontenelle@gmail.com>, 2024\n"
 "Language-Team: Portuguese (Brazil) (https://app.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pt_BR\n"
 "Plural-Forms: nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % "
 "1000000 == 0 ? 1 : 2;\n"
 
 #: ../../faq/design.rst:3
 msgid "Design and History FAQ"
-msgstr "Design e Histórico FAQ"
+msgstr "FAQ sobre design e histórico"
 
 #: ../../faq/design.rst:6
 msgid "Contents"
@@ -1153,8 +1153,8 @@ msgstr ""
 msgid ""
 "If you're trying to build a pathname for a DOS command, try e.g. one of ::"
 msgstr ""
-"Se você estiver tentando criar um nome de caminho para um comando DOS, "
-"tente, por exemplo. um de ::"
+"Se você estiver tentando construir um nome de caminho para um comando DOS, "
+"tente, por exemplo, algum desses ::"
 
 #: ../../faq/design.rst:656
 msgid "Why doesn't Python have a \"with\" statement for attribute assignments?"
@@ -1259,8 +1259,8 @@ msgid ""
 "English."
 msgstr ""
 "Note como a segunda é ligeiramente mais fácil de ler. Note com mais atenção "
-"como os dois pontos iniciam o exemplo nessa resposta de perguntas "
-"frequentes; é um uso padrão em Português."
+"como os dois pontos iniciam o exemplo nessa resposta de FAQ; é um uso padrão "
+"em inglês."
 
 #: ../../faq/design.rst:727
 msgid ""
