--- a/faq/extending.po
+++ b/faq/extending.po
@@ -21,10 +21,10 @@ msgstr ""
 "Last-Translator: Pedro Fonini, 2024\n"
 "Language-Team: Portuguese (Brazil) (https://app.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pt_BR\n"
 "Plural-Forms: nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % "
 "1000000 == 0 ? 1 : 2;\n"
 
@@ -62,10 +62,10 @@ msgstr "Posso criar minhas próprias funções em C++?"
 
 #: ../../faq/extending.rst:28
 msgid ""
-"Yes, using the C compatibility features found in C++.  Place ``extern "
-"\"C\" { ... }`` around the Python include files and put ``extern \"C\"`` "
-"before each function that is going to be called by the Python interpreter.  "
-"Global or static C++ objects with constructors are probably not a good idea."
+"Yes, using the C compatibility features found in C++.  Place ``extern \"C\" "
+"{ ... }`` around the Python include files and put ``extern \"C\"`` before "
+"each function that is going to be called by the Python interpreter.  Global "
+"or static C++ objects with constructors are probably not a good idea."
 msgstr ""
 "Sim, usando recursos de compatibilidade encontrados em C++. Coloque ``extern "
 "\"C\" { ... }`` em torno dos arquivos de inclusão do Python e coloque "
@@ -75,7 +75,7 @@ msgstr ""
 
 #: ../../faq/extending.rst:37
 msgid "Writing C is hard; are there any alternatives?"
-msgstr "A escrita em C é difícil, Há algumas alternativas?"
+msgstr "Escrever C é difícil; há alguma alternativa?"
 
 #: ../../faq/extending.rst:39
 msgid ""
@@ -210,7 +210,7 @@ msgid ""
 msgstr ""
 "A função :c:func:`PyObject_CallMethod` pode ser usada para chamar um método "
 "arbitrário de um objeto.  Os parâmetros são o objeto, o nome do método a ser "
-"chamado, uma string de formato como a usada na :c:func:`Py_BuildValue`, e os "
+"chamado, uma string de formato como a usada em :c:func:`Py_BuildValue`, e os "
 "valores dos argumentos::"
 
 #: ../../faq/extending.rst:121
@@ -221,16 +221,15 @@ msgid ""
 msgstr ""
 "Isso funciona para qualquer objeto que tenha métodos -- sejam eles embutidos "
 "ou definidos por usuário. Você fica então responsável por chamar :c:func:"
-"`Py_DECREF` no valor retornado."
+"`Py_DECREF` no valor de retorno."
 
 #: ../../faq/extending.rst:124
 msgid ""
 "To call, e.g., a file object's \"seek\" method with arguments 10, 0 "
 "(assuming the file object pointer is \"f\")::"
 msgstr ""
-"Para chamar, por exemplo, o método \"seek\" de um objeto de arquivo com "
-"argumentos 10, 0 (presuminod que \"f\" é o ponteiro para o objeto de "
-"arquivo)::"
+"Para chamar, por exemplo, o método \"seek\" de um objeto arquivo com "
+"argumentos 10, 0 (presumindo que \"f\" é o ponteiro para o objeto arquivo)::"
 
 #: ../../faq/extending.rst:135
 msgid ""
