--- a/glossary.po
+++ b/glossary.po
@@ -23,10 +23,10 @@ msgstr ""
 "Last-Translator: Rafael Fontenelle <rffontenelle@gmail.com>, 2024\n"
 "Language-Team: Portuguese (Brazil) (https://app.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pt_BR\n"
 "Plural-Forms: nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % "
 "1000000 == 0 ? 1 : 2;\n"
 
@@ -368,9 +368,9 @@ msgid ""
 "Benevolent Dictator For Life, a.k.a. `Guido van Rossum <https://gvanrossum."
 "github.io/>`_, Python's creator."
 msgstr ""
-"Abreviação da expressão da língua inglesa \"Benevolent Dictator for "
-"Life\" (em português, \"Ditador Benevolente Vitalício\"), referindo-se a "
-"`Guido van Rossum <https://gvanrossum.github.io/>`_, criador do Python."
+"Abreviação da expressão da língua inglesa \"Benevolent Dictator for Life\" "
+"(em português, \"Ditador Benevolente Vitalício\"), referindo-se a `Guido van "
+"Rossum <https://gvanrossum.github.io/>`_, criador do Python."
 
 #: ../../glossary.rst:149
 msgid "binary file"
@@ -2556,7 +2556,7 @@ msgstr ""
 
 #: ../../glossary.rst:1092
 msgid "type alias"
-msgstr "tipo alias"
+msgstr "apelido de tipo"
 
 #: ../../glossary.rst:1094
 msgid "A synonym for a type, created by assigning the type to an identifier."
@@ -2569,8 +2569,8 @@ msgid ""
 "Type aliases are useful for simplifying :term:`type hints <type hint>`. For "
 "example::"
 msgstr ""
-"Tipos alias são úteis para simplificar :term:`dicas de tipo <type hint>`. "
-"Por exemplo::"
+"Apelidos de tipo são úteis para simplificar :term:`dicas de tipo <type "
+"hint>`. Por exemplo::"
 
 #: ../../glossary.rst:1105
 msgid "could be made more readable like this::"
