--- a/howto/regex.po
+++ b/howto/regex.po
@@ -23,10 +23,10 @@ msgstr ""
 "Last-Translator: Rafael Fontenelle <rffontenelle@gmail.com>, 2024\n"
 "Language-Team: Portuguese (Brazil) (https://app.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pt_BR\n"
 "Plural-Forms: nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % "
 "1000000 == 0 ? 1 : 2;\n"
 
@@ -76,8 +76,8 @@ msgstr ""
 "essencialmente uma mini linguagem de programação altamente especializada "
 "incluída dentro do Python e disponível através do módulo :mod:`re`. Usando "
 "esta pequena linguagem, você especifica as regras para o conjunto de strings "
-"possíveis que você quer combinar; esse conjunto pode conter sentenças em "
-"inglês, endereços de e-mail, ou comandos TeX ou qualquer coisa que você "
+"possíveis que você quer corresponder; esse conjunto pode conter sentenças em "
+"português, endereços de e-mail, comandos TeX ou qualquer coisa que você "
 "queira. Você poderá então perguntar coisas como \"Essa string se enquadra "
 "dentro do padrão?\" ou \"Existe alguma parte da string que se enquadra nesse "
 "padrão?\". Você também pode usar as REs para modificar uma string ou dividi-"
@@ -94,12 +94,12 @@ msgid ""
 "internals."
 msgstr ""
 "Os padrões das expressões regulares são compilados em uma série de bytecodes "
-"que são então executadas por um mecanismo de combinação escrito em C. Para "
-"usos avançados, talvez seja necessário prestar atenção em como o mecanismo "
-"irá executar uma dada RE, e escrever a RE de forma que os bytecodes executem "
-"de forma mais rápida. Otimização é um tema que não será visto neste "
-"documento, porque ele requer que você tenha um bom entendimento dos "
-"mecanismos de combinação internos."
+"que são então executadas por um mecanismo de correspondência escrito em C. "
+"Para usos avançados, talvez seja necessário prestar atenção em como o "
+"mecanismo irá executar uma dada RE, e escrever a RE de forma que os "
+"bytecodes executem de forma mais rápida. Otimização é um tema que não será "
+"visto neste documento, porque ele requer que você tenha um bom entendimento "
+"dos mecanismos de combinação internos."
 
 #: ../../howto/regex.rst:42
 msgid ""
@@ -126,7 +126,7 @@ msgstr ""
 
 #: ../../howto/regex.rst:51
 msgid "Simple Patterns"
-msgstr "Padrões Simples"
+msgstr "Padrões simples"
 
 #: ../../howto/regex.rst:53
 msgid ""
@@ -138,7 +138,7 @@ msgstr ""
 "possíveis.\n"
 "Como as expressões regulares são usadas para operar em strings, vamos "
 "começar\n"
-"com a tarefa mais comum: de correspondência caracteres."
+"com a tarefa mais comum: correspondência de caracteres."
 
 #: ../../howto/regex.rst:57
 msgid ""
@@ -154,7 +154,7 @@ msgstr ""
 
 #: ../../howto/regex.rst:63
 msgid "Matching Characters"
-msgstr "Caracteres Correspondentes"
+msgstr "Correspondendo caracteres"
 
 #: ../../howto/regex.rst:65
 msgid ""
@@ -164,11 +164,10 @@ msgid ""
 "``TEST`` as well; more about this later.)"
 msgstr ""
 "A maioria das letras e caracteres simplesmente irão corresponder entre si. "
-"Por exemplo, a expressão regular ``teste``\n"
-"irá combinar com a string ``teste`` totalmente. (Você pode habilitar o modo "
-"de maiúsculas e minúsculas que faria com que\n"
-"a RE corresponder com ``Test`` ou ``TEST`` também; veremos mais sobre isso "
-"mais adiante.)"
+"Por exemplo, a expressão regular ``teste`` irá combinar com a string "
+"``teste`` totalmente. (Você pode habilitar o modo de maiúsculas e minúsculas "
+"que faria com que a RE corresponder com ``Test`` ou ``TEST`` também; veremos "
+"mais sobre isso mais adiante.)"
 
 #: ../../howto/regex.rst:70
 msgid ""
@@ -180,14 +179,10 @@ msgid ""
 "do."
 msgstr ""
 "Há exceções a essa regra, alguns caracteres são metacaracteres especiais, e "
-"não se\n"
-"correspondem. Em vez disso, eles sinalizam que alguma coisa fora do normal "
-"deve\n"
-"ser correspondida, ou eles afetam outras partes da RE, repetindo-as ou "
-"alterando seus\n"
-"significados. Grande parte deste documento é dedicada à discussão de vários "
-"metacaracteres\n"
-"e o que eles fazem."
+"não se correspondem. Em vez disso, eles sinalizam que alguma coisa fora do "
+"normal deve ser correspondida, ou eles afetam outras partes da RE, repetindo-"
+"as ou alterando seus significados. Grande parte deste documento é dedicada à "
+"discussão de vários metacaracteres e o que eles fazem."
 
 #: ../../howto/regex.rst:76
 msgid ""
@@ -473,7 +468,7 @@ msgstr "Correspondência"
 
 #: ../../howto/regex.rst:189
 msgid "Explanation"
-msgstr "Explanação"
+msgstr "Explicação"
 
 #: ../../howto/regex.rst:191
 msgid "1"
@@ -676,7 +671,7 @@ msgid ""
 "various special features and syntax variations.  We'll go over the available "
 "settings later, but for now a single example will do::"
 msgstr ""
-":func:`re.compile()` também aceita um argumento opcional *flags*, utilizados "
+":func:`re.compile` também aceita um argumento opcional *flags*, utilizados "
 "para habilitar vários recursos especiais e variações de sintaxe. Nós vamos "
 "ver todas as configurações disponíveis mais tarde, mas por agora, um único "
 "exemplo vai servir::"
@@ -829,7 +824,7 @@ msgstr "String regular"
 
 #: ../../howto/regex.rst:341
 msgid "Raw string"
-msgstr "**String crua**"
+msgstr "**String bruta**"
 
 #: ../../howto/regex.rst:343
 msgid "``\"ab*\"``"
@@ -853,7 +848,7 @@ msgstr "``r\"\\w+\\s+\\1\"``"
 
 #: ../../howto/regex.rst:352
 msgid "Performing Matches"
-msgstr "Executando comparações"
+msgstr "Executando correspondências"
 
 #: ../../howto/regex.rst:354
 msgid ""
@@ -926,9 +921,9 @@ msgid ""
 msgstr ""
 ":meth:`~re.Pattern.match` e :meth:`~re.Pattern.search` retornam ``None`` se "
 "não existir nenhuma correspondência encontrada. Se tiveram sucesso, uma "
-"instância de :ref:`match object <match-objects>` é retornada, contendo "
-"informações sobre a correspondência: onde ela começa e termina, a substring "
-"com a qual ela teve correspondência, e mais."
+"instância de :ref:`objeto correspondência <match-objects>` é retornada, "
+"contendo informações sobre a correspondência: onde ela começa e termina, a "
+"substring com a qual ela teve correspondência, e mais."
 
 #: ../../howto/regex.rst:380
 msgid ""
@@ -946,7 +941,7 @@ msgid ""
 "the Python interpreter, import the :mod:`re` module, and compile a RE::"
 msgstr ""
 "Este documento usa o interpretador Python padrão para seus exemplos. "
-"Primeiro, execute o interpretador Python, importe o modulo :mod:`re`, e "
+"Primeiro, execute o interpretador Python, importe o módulo :mod:`re`, e "
 "compile uma RE::"
 
 #: ../../howto/regex.rst:395
@@ -1034,13 +1029,13 @@ msgid ""
 "case. ::"
 msgstr ""
 ":meth:`~re.Match.group` retorna a substring correspondeu com a RE.  :meth:"
-"`~re.Match.start` e  :meth:`~re.Match.end` retornam os índices inicial e o "
-"final da substring correspondente.  :meth:`~re.Match.span` retorna tanto os "
-"índices inicial e final em uma única tupla. Como o método  :meth:`~re."
-"Pattern.match`  somente verifica se a RE corresponde com o início de uma "
-"string,  :meth:`!start`  será sempre zero. No entanto, o método :meth:`~re."
-"Pattern.search` dos objetos padrão, varre toda a string, de modo que a "
-"substring correspondente pode não iniciar em zero nesse caso."
+"`~re.Match.start` e :meth:`~re.Match.end` retornam os índices inicial e o "
+"final da substring correspondente. :meth:`~re.Match.span` retorna tanto os "
+"índices inicial e final em uma única tupla. Como o método :meth:`~re.Pattern."
+"match` somente verifica se a RE corresponde ao início de uma string, :meth:`!"
+"start` será sempre zero. No entanto, o método :meth:`~re.Pattern.search` dos "
+"objetos padrão, varre toda a string, de modo que a substring correspondente "
+"pode não iniciar em zero nesse caso."
 
 #: ../../howto/regex.rst:456
 msgid ""
@@ -1048,9 +1043,9 @@ msgid ""
 "<match-objects>` in a variable, and then check if it was ``None``.  This "
 "usually looks like::"
 msgstr ""
-"Nos programas reais, o estilo mais comum é armazenar o :ref:`objeto Match "
-"<match-objects>` em uma variável e, em seguida, verificar se ela é ``None``. "
-"Isso geralmente se parece com::"
+"Nos programas reais, o estilo mais comum é armazenar o :ref:`objeto "
+"correspondência <match-objects>` em uma variável e, em seguida, verificar se "
+"ela é ``None``. Isso geralmente se parece com::"
 
 #: ../../howto/regex.rst:467
 msgid ""
@@ -1089,7 +1084,7 @@ msgstr ""
 
 #: ../../howto/regex.rst:496
 msgid "Module-Level Functions"
-msgstr "Funções de Nível de Módulo"
+msgstr "Funções de nível de módulo"
 
 #: ../../howto/regex.rst:498
 msgid ""
@@ -1199,7 +1194,7 @@ msgstr ":const:`IGNORECASE`, :const:`I`"
 
 #: ../../howto/regex.rst:546
 msgid "Do case-insensitive matches."
-msgstr "Faz combinações sem diferenciar maiúsculo de minúsculo"
+msgstr "Faz combinações sem diferenciar maiúsculo de minúsculo."
 
 #: ../../howto/regex.rst:548
 msgid ":const:`LOCALE`, :const:`L`"
@@ -1235,13 +1230,13 @@ msgid ""
 "letters, too. Full Unicode matching also works unless the :const:`ASCII` "
 "flag is used to disable non-ASCII matches.  When the Unicode patterns ``[a-"
 "z]`` or ``[A-Z]`` are used in combination with the :const:`IGNORECASE` flag, "
-"they will match the 52 ASCII letters and 4 additional non-ASCII letters: "
-"'İ' (U+0130, Latin capital letter I with dot above), 'ı' (U+0131, Latin "
-"small letter dotless i), 'ſ' (U+017F, Latin small letter long s) and "
-"'K' (U+212A, Kelvin sign).  ``Spam`` will match ``'Spam'``, ``'spam'``, "
-"``'spAM'``, or ``'ſpam'`` (the latter is matched only in Unicode mode). This "
-"lowercasing doesn't take the current locale into account; it will if you "
-"also set the :const:`LOCALE` flag."
+"they will match the 52 ASCII letters and 4 additional non-ASCII letters: 'İ' "
+"(U+0130, Latin capital letter I with dot above), 'ı' (U+0131, Latin small "
+"letter dotless i), 'ſ' (U+017F, Latin small letter long s) and 'K' (U+212A, "
+"Kelvin sign).  ``Spam`` will match ``'Spam'``, ``'spam'``, ``'spAM'``, or "
+"``'ſpam'`` (the latter is matched only in Unicode mode). This lowercasing "
+"doesn't take the current locale into account; it will if you also set the :"
+"const:`LOCALE` flag."
 msgstr ""
 "Execute correspondência sem distinção entre maiúsculas e minúsculas; a "
 "classe de caracteres e as strings literais corresponderão às letras "
@@ -1250,13 +1245,14 @@ msgstr ""
 "funciona, a menos que o sinalizador :const:`ASCII` seja usado para "
 "desabilitar correspondências não ASCII. Quando os padrões Unicode ``[a-z]`` "
 "ou ``[A-Z]`` são usados ​​em combinação com o sinalizador :const:`IGNORECASE`, "
-"eles corresponderão às 52 letras ASCII e 4 letras não ASCII adicionais: "
-"'İ' (U+0130, letra maiúscula latina I com ponto acima), 'ı' (U+0131, letra "
+"eles corresponderão às 52 letras ASCII e 4 letras não ASCII adicionais: 'İ' "
+"(U+0130, letra maiúscula latina I com ponto acima), 'ı' (U+0131, letra "
 "minúscula latina i sem ponto), 'ſ' (U+017F, letra minúscula latina s longo) "
 "e 'K' (U+212A, sinal Kelvin). ``Spam`` corresponderá a ``'Spam'``, "
 "``'spam'``, ``'spAM'`` ou ``'ſpam'`` (o último é correspondido apenas no "
-"modo Unicode). Essa capitalização em minúsculas não leva em conta o local "
-"atual; levará se você também definir o sinalizador :const:`LOCALE`."
+"modo Unicode). Essa capitalização em minúsculas não leva em conta a "
+"localidade atual; levará se você também definir o sinalizador :const:"
+"`LOCALE`."
 
 #: ../../howto/regex.rst:580
 msgid ""
