--- a/howto/urllib2.po
+++ b/howto/urllib2.po
@@ -22,10 +22,10 @@ msgstr ""
 "Last-Translator: Rafael Fontenelle <rffontenelle@gmail.com>, 2024\n"
 "Language-Team: Portuguese (Brazil) (https://app.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pt_BR\n"
 "Plural-Forms: nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % "
 "1000000 == 0 ? 1 : 2;\n"
 
@@ -321,8 +321,8 @@ msgid ""
 "(for example, if the response is a \"redirection\" that requests the client "
 "fetch the document from a different URL, urllib will handle that for you). "
 "For those it can't handle, urlopen will raise an :exc:`HTTPError`. Typical "
-"errors include '404' (page not found), '403' (request forbidden), and "
-"'401' (authentication required)."
+"errors include '404' (page not found), '403' (request forbidden), and '401' "
+"(authentication required)."
 msgstr ""
 
 #: ../../howto/urllib2.rst:242
