--- a/reference/datamodel.po
+++ b/reference/datamodel.po
@@ -23,10 +23,10 @@ msgstr ""
 "Last-Translator: Rafael Fontenelle <rffontenelle@gmail.com>, 2024\n"
 "Language-Team: Portuguese (Brazil) (https://app.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pt_BR\n"
 "Plural-Forms: nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % "
 "1000000 == 0 ? 1 : 2;\n"
 
@@ -2485,9 +2485,9 @@ msgid ""
 "of :meth:`__hash__` from a parent class, the interpreter must be told this "
 "explicitly by setting ``__hash__ = <ParentClass>.__hash__``."
 msgstr ""
-"Se uma classe que sobrescreve :meth:`__eq__` precisa manter a implementação "
-"de :meth:`__hash__` de uma classe pai, o interpretador deve ser informado "
-"disso explicitamente pela configuração ``__hash__ = <ClassePai>.__hash__``."
+"Se uma classe que substitui :meth:`__eq__` precisa manter a implementação "
+"de :meth:`__hash__` de uma classe base, o interpretador deve ser informado "
+"disso explicitamente pela configuração ``__hash__ = <ClasseBase>.__hash__``."
 
 #: ../../reference/datamodel.rst:1474
 msgid ""
