--- a/reference/import.po
+++ b/reference/import.po
@@ -22,10 +22,10 @@ msgstr ""
 "Last-Translator: Rafael Fontenelle <rffontenelle@gmail.com>, 2024\n"
 "Language-Team: Portuguese (Brazil) (https://app.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pt_BR\n"
 "Plural-Forms: nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % "
 "1000000 == 0 ? 1 : 2;\n"
 
@@ -565,10 +565,10 @@ msgid ""
 "exceptions raised are simply propagated up, aborting the import process."
 msgstr ""
 "Se o localizador de metacaminho souber como tratar o módulo nomeado, ele "
-"retorna um objeto com especificações. Se ele não puder tratar o módulo "
+"retorna um objeto de especificação. Se ele não puder tratar o módulo "
 "nomeado, ele retorna ``None``. Se o processamento de :data:`sys.meta_path` "
 "alcançar o fim da sua lista sem retornar uma especificação, então :exc:"
-"`ModuleNotFoundError` é levantada. Qualquer outras exceções levantadas são "
+"`ModuleNotFoundError` é levantada. Quaisquer outras exceções levantadas são "
 "simplesmente propagadas para cima, abortando o processo de importação."
 
 #: ../../reference/import.rst:295
@@ -659,8 +659,8 @@ msgid ""
 "of what happens during the loading portion of import::"
 msgstr ""
 "Se e quando uma especificação do módulo for encontrada, o mecanismo de "
-"importação irá usá-lo (e o carregador que ele contém) durante o carregamento "
-"do módulo. Aqui está uma aproximação do que acontece durante a etapa de "
+"importação irá usá-la (e o carregador que ela contém) durante o carregamento "
+"do módulo. Esta é uma aproximação do que acontece durante a etapa de "
 "carregamento de uma importação::"
 
 #: ../../reference/import.rst:370
@@ -912,8 +912,8 @@ msgid ""
 "submodule.  Let's say you have the following directory structure::"
 msgstr ""
 "Quando um submódulo é carregado usando qualquer mecanismo (por exemplo, APIs "
-"``importlib``, as instruções ``import`` ou ``import-from``, ou "
-"``__import__()`` embutidas) uma ligação é colocada no espaço de nomes do "
+"``importlib``, as instruções ``import`` ou ``import-from``, ou a função "
+"``__import__()`` embutida) uma ligação é colocada no espaço de nomes do "
 "módulo pai para o objeto submódulo. Por exemplo, se o pacote ``spam`` tiver "
 "um submódulo ``foo``, após importar ``spam.foo``, ``spam`` terá um atributo "
 "``foo`` que está vinculado ao submódulo. Digamos que você tenha a seguinte "
@@ -970,7 +970,7 @@ msgid ""
 "a module spec the loader had that responsibility."
 msgstr ""
 "Usar uma especificação durante a importação permite que o estado seja "
-"transferido entre componentes do sistema de importação, por exemplo. entre o "
+"transferido entre componentes do sistema de importação, por exemplo entre o "
 "localizador que cria a especificação do módulo e o carregador que o executa. "
 "Mais importante ainda, permite que o mecanismo de importação execute as "
 "operações inerentes de carregamento, enquanto que sem uma especificação de "
