--- a/tutorial/appetite.po
+++ b/tutorial/appetite.po
@@ -17,10 +17,10 @@ msgstr ""
 "Last-Translator: Adorilson Bezerra <adorilson@gmail.com>, 2020\n"
 "Language-Team: Portuguese (Brazil) (https://app.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pt_BR\n"
 "Plural-Forms: nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % "
 "1000000 == 0 ? 1 : 2;\n"
 
@@ -36,12 +36,12 @@ msgid ""
 "of photo files in a complicated way. Perhaps you'd like to write a small "
 "custom database, or a specialized GUI application, or a simple game."
 msgstr ""
-"Se você trabalha muito com computadores, acabará encontrando alguma tarefa "
-"que gostaria de automatizar. Por exemplo, você pode querer fazer busca-e-"
-"troca em um grande número de arquivos de texto, ou renomear e reorganizar um "
-"monte de arquivos de fotos de uma maneira complicada. Talvez você gostaria "
-"de escrever um pequeno banco de dados personalizado, ou um aplicativo GUI "
-"especializado, ou um jogo simples."
+"Se você trabalha bastante com computadores, eventualmente perceberá que há "
+"alguma tarefa que gostaria de automatizar. Por exemplo, pode querer realizar "
+"uma busca e substituição em um grande número de arquivos de texto ou "
+"renomear e reorganizar um conjunto de fotos de maneira complexa. Talvez "
+"deseje criar um pequeno banco de dados personalizado, uma aplicação GUI "
+"especializada ou um jogo simples."
 
 #: ../../tutorial/appetite.rst:13
 msgid ""
@@ -129,7 +129,7 @@ msgid ""
 msgstr ""
 "Python é uma linguagem interpretada, por isso você pode economizar um tempo "
 "considerável durante o desenvolvimento, uma vez que não há necessidade de "
-"compilação e vinculação (*linking*). O interpretador pode ser usado "
+"compilação e ligação (*linking*). O interpretador pode ser usado "
 "interativamente, o que torna fácil experimentar diversas características da "
 "linguagem, escrever programas “descartáveis”, ou testar funções em um "
 "desenvolvimento debaixo para cima (*bottom-up*). É também uma útil "
@@ -176,12 +176,12 @@ msgid ""
 "extension or command language for that application."
 msgstr ""
 "Python é *extensível*: se você sabe como programar em C, é fácil adicionar "
-"funções ou módulos diretamente no interpretador, seja para desempenhar "
-"operações críticas em máxima velocidade, ou para vincular programas Python a "
-"bibliotecas que só estejam disponíveis em formato binário (como uma "
-"biblioteca gráfica de terceiros). Uma vez que você tenha sido fisgado, você "
-"pode vincular o interpretador Python a uma aplicação escrita em C e utilizá-"
-"la como linguagem de comandos ou extensão para esta aplicação."
+"módulos ou funções embutidas diretamente no interpretador, seja para "
+"desempenhar operações críticas em máxima velocidade, ou para vincular "
+"programas Python a bibliotecas que só estejam disponíveis em formato binário "
+"(como uma biblioteca gráfica de terceiros). Uma vez que você tenha sido "
+"fisgado, você pode vincular o interpretador Python a uma aplicação escrita "
+"em C e utilizá-la como linguagem de comandos ou extensão para esta aplicação."
 
 #: ../../tutorial/appetite.rst:70
 msgid ""
@@ -200,9 +200,10 @@ msgid ""
 "more detail.  Since the best way to learn a language is to use it, the "
 "tutorial invites you to play with the Python interpreter as you read."
 msgstr ""
-"Agora que você está entusiasmado com Python, vai querer conhecê-la com mais "
+"Agora que você se entusiasmou com o Python, vai querer conhecê-lo com mais "
 "detalhes. Partindo do princípio que a melhor maneira de aprender uma "
-"linguagem é usando-a, você está agora convidado a fazê-lo com este tutorial."
+"linguagem é usando-a, este tutorial lhe convida para fazê-lo com o "
+"interpretador do Python enquanto você o lê."
 
 #: ../../tutorial/appetite.rst:78
 msgid ""
@@ -222,6 +223,6 @@ msgid ""
 "advanced concepts like exceptions and user-defined classes."
 msgstr ""
 "O resto do tutorial introduz diversos aspectos do sistema e linguagem Python "
-"por intermédio de exemplos. Serão abordadas expressões simples, comandos, "
+"por intermédio de exemplos. Serão abordadas expressões simples, instruções, "
 "tipos, funções e módulos. Finalmente, serão explicados alguns conceitos "
 "avançados como exceções e classes definidas pelo usuário."
