--- a/tutorial/controlflow.po
+++ b/tutorial/controlflow.po
@@ -19,10 +19,10 @@ msgstr ""
 "Last-Translator: Rafael Fontenelle <rffontenelle@gmail.com>, 2024\n"
 "Language-Team: Portuguese (Brazil) (https://app.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pt_BR\n"
 "Plural-Forms: nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % "
 "1000000 == 0 ? 1 : 2;\n"
 
@@ -41,14 +41,14 @@ msgstr ""
 
 #: ../../tutorial/controlflow.rst:14
 msgid ":keyword:`!if` Statements"
-msgstr "Comandos :keyword:`!if`"
+msgstr "Instruções :keyword:`!if`"
 
 #: ../../tutorial/controlflow.rst:16
 msgid ""
 "Perhaps the most well-known statement type is the :keyword:`if` statement.  "
 "For example::"
 msgstr ""
-"Provavelmente o mais conhecido comando de controle de fluxo é o :keyword:"
+"Provavelmente a mais conhecida instrução de controle de fluxo é o :keyword:"
 "`if`. Por exemplo::"
 
 #: ../../tutorial/controlflow.rst:33
@@ -62,12 +62,12 @@ msgstr ""
 "Pode haver zero ou mais partes :keyword:`elif`, e a parte :keyword:`else` é "
 "opcional. A palavra-chave ':keyword:`!elif`' é uma abreviação para 'else "
 "if', e é útil para evitar indentação excessiva. Uma sequência :keyword:`!"
-"if` ... :keyword:`!elif` ... :keyword:`!elif` ... substitui os comandos "
+"if` ... :keyword:`!elif` ... :keyword:`!elif` ... substitui as instruções "
 "``switch`` ou ``case``, encontrados em outras linguagens."
 
 #: ../../tutorial/controlflow.rst:43
 msgid ":keyword:`!for` Statements"
-msgstr "Comandos :keyword:`!for`"
+msgstr "Instruções :keyword:`!for`"
 
 #: ../../tutorial/controlflow.rst:48
 msgid ""
@@ -79,10 +79,10 @@ msgid ""
 "a string), in the order that they appear in the sequence.  For example (no "
 "pun intended):"
 msgstr ""
-"O comando :keyword:`for` em Python é um pouco diferente do que costuma ser "
+"A instrução :keyword:`for` em Python é um pouco diferente do que costuma ser "
 "em C ou Pascal. Ao invés de sempre iterar sobre uma progressão aritmética de "
 "números (como no Pascal), ou permitir ao usuário definir o passo de iteração "
-"e a condição de parada (como C), o comando :keyword:`!for` do Python itera "
+"e a condição de parada (como C), a instrução :keyword:`!for` do Python itera "
 "sobre os itens de qualquer sequência (seja uma lista ou uma string), na "
 "ordem que aparecem na sequência. Por exemplo:"
 
@@ -160,9 +160,9 @@ msgid ""
 "keyword:`for` statement is such a construct, while an example of a function "
 "that takes an iterable is :func:`sum`::"
 msgstr ""
-"Dizemos que um objeto é :term:`iterável<iterable>`, isso é, candidato a ser "
-"alvo de uma função ou construção que espera alguma coisa capaz de retornar "
-"sucessivamente seus elementos um de cada vez. Nós vimos que o comando :"
+"Dizemos que um objeto é :term:`iterável`, isso é, candidato a ser alvo de "
+"uma função ou construção que espera alguma coisa capaz de retornar "
+"sucessivamente seus elementos um de cada vez. Nós vimos que a instrução :"
 "keyword:`for` é um exemplo de construção, enquanto que um exemplo de função "
 "que recebe um iterável é :func:`sum`::"
 
@@ -248,16 +248,16 @@ msgstr ""
 
 #: ../../tutorial/controlflow.rst:223
 msgid ":keyword:`!pass` Statements"
-msgstr "Comandos :keyword:`!pass`"
+msgstr "Instruções :keyword:`!pass`"
 
 #: ../../tutorial/controlflow.rst:225
 msgid ""
 "The :keyword:`pass` statement does nothing. It can be used when a statement "
 "is required syntactically but the program requires no action. For example::"
 msgstr ""
-"O comando :keyword:`pass` não faz nada. Pode ser usada quando a sintaxe "
-"exige um comando mas a semântica do programa não requer nenhuma ação. Por "
-"exemplo::"
+"A instrução :keyword:`pass` não faz nada. Pode ser usada quando a sintaxe "
+"exige uma instrução, mas a semântica do programa não requer nenhuma ação. "
+"Por exemplo::"
 
 #: ../../tutorial/controlflow.rst:232
 msgid "This is commonly used for creating minimal classes::"
@@ -296,7 +296,7 @@ msgid ""
 msgstr ""
 "A palavra reservada :keyword:`def` inicia a *definição* de uma função. Ela "
 "deve ser seguida do nome da função e da lista de parâmetros formais entre "
-"parênteses. Os comandos que formam o corpo da função começam na linha "
+"parênteses. As instruções que formam o corpo da função começam na linha "
 "seguinte e devem ser indentados."
 
 #: ../../tutorial/controlflow.rst:276
@@ -338,7 +338,7 @@ msgstr ""
 "circundantes, depois na tabela de símbolos global e, finalmente, na tabela "
 "de nomes da própria linguagem. Embora possam ser referenciadas, variáveis "
 "globais e de funções externas não podem ter atribuições (a menos que seja "
-"utilizado o comando :keyword:`global`, para variáveis globais, ou :keyword:"
+"utilizada a instrução :keyword:`global`, para variáveis globais, ou :keyword:"
 "`nonlocal`, para variáveis de funções externas)."
 
 #: ../../tutorial/controlflow.rst:294
@@ -382,7 +382,7 @@ msgid ""
 msgstr ""
 "Conhecendo outras linguagens, pode-se questionar que ``fib`` não é uma "
 "função, mas um procedimento, pois ela não devolve um valor. Na verdade, "
-"mesmo funções que não usam o comando :keyword:`return` devolvem um valor, "
+"mesmo funções que não usam a instrução :keyword:`return` devolvem um valor, "
 "ainda que pouco interessante. Esse valor é chamado ``None`` (é um nome "
 "embutido). O interpretador interativo evita escrever ``None`` quando ele é o "
 "único resultado de uma expressão. Mas se quiser vê-lo pode usar a função :"
@@ -550,9 +550,9 @@ msgid ""
 "(``state``, ``action``, and ``type``).  This function can be called in any "
 "of the following ways::"
 msgstr ""
-"aceita um argumento obrigatório (``voltage``) e três argumentos opcionais "
-"(``state``, ``action``, e ``type``). Esta função pode ser chamada de "
-"qualquer uma dessas formas::"
+"aceita um argumento obrigatório (``voltagem``) e três argumentos opcionais "
+"(``estado``, ``ação``, e ``tipo``). Esta função pode ser chamada de qualquer "
+"uma dessas formas::"
 
 #: ../../tutorial/controlflow.rst:466
 msgid "but all the following calls would be invalid::"
@@ -570,11 +570,11 @@ msgid ""
 msgstr ""
 "Em uma chamada de função, argumentos nomeados devem vir depois dos "
 "argumentos posicionais. Todos os argumentos nomeados passados devem "
-"corresponder com argumentos aceitos pela função (ex. ``actor`` não é um "
-"argumento nomeado válido para a função ``parrot``), mas sua ordem é "
+"corresponder com argumentos aceitos pela função (ex. ``ator`` não é um "
+"argumento nomeado válido para a função ``papagaio``), mas sua ordem é "
 "irrelevante. Isto também inclui argumentos obrigatórios (ex.: "
-"``parrot(voltage=1000)`` funciona). Nenhum argumento pode receber mais de um "
-"valor. Eis um exemplo que não funciona devido a esta restrição::"
+"``papagaio(voltagem=1000)`` funciona). Nenhum argumento pode receber mais de "
+"um valor. Eis um exemplo que não funciona devido a esta restrição::"
 
 #: ../../tutorial/controlflow.rst:489
 msgid ""
@@ -719,7 +719,7 @@ msgid ""
 "places no restrictions on the calling convention and arguments may be passed "
 "by position or keyword::"
 msgstr ""
-"A definição da primeira função, ``standard_arg``, a forma mais familiar, não "
+"A definição da primeira função, ``arg_padrão``, a forma mais familiar, não "
 "coloca nenhuma restrição para a chamada da função e argumentos podem ser "
 "passados por posição ou nome::"
 
@@ -728,8 +728,8 @@ msgid ""
 "The second function ``pos_only_arg`` is restricted to only use positional "
 "parameters as there is a ``/`` in the function definition::"
 msgstr ""
-"A segunda função ``pos_only_arg`` está restrita ao uso de parâmetros somente "
-"posicionais, uma vez que existe uma ``/`` na definição da função::"
+"A segunda função ``arg_somente_pos`` está restrita ao uso de parâmetros "
+"somente posicionais, uma vez que existe uma ``/`` na definição da função::"
 
 #: ../../tutorial/controlflow.rst:625
 msgid ""
@@ -753,16 +753,17 @@ msgid ""
 "as a key::"
 msgstr ""
 "Finalmente, considere essa definição de função que possui uma potencial "
-"colisão entre o argumento posicional ``name`` e ``**kwds`` que possui "
-"``name`` como uma chave::"
+"colisão entre o argumento posicional ``nome`` e ``**kwds`` que possui "
+"``nome`` como uma chave::"
 
 #: ../../tutorial/controlflow.rst:661
 msgid ""
 "There is no possible call that will make it return ``True`` as the keyword "
 "``'name'`` will always bind to the first parameter. For example::"
 msgstr ""
-"Não é possível  essa chamada devolver ``True``, uma vez que a chave "
-"``'name'`` sempre será aplicada para o primeiro parâmetro. Por exemplo::"
+"Não é possível essa chamada devolver ``True``, uma vez que o argumento "
+"nomeado ``'nome'`` sempre será aplicado para o primeiro parâmetro. Por "
+"exemplo::"
 
 #: ../../tutorial/controlflow.rst:670
 msgid ""
@@ -770,8 +771,8 @@ msgid ""
 "``name`` as a positional argument and ``'name'`` as a key in the keyword "
 "arguments::"
 msgstr ""
-"Mas usando ``/`` (somente argumentos posicionais), isso é possível já que "
-"permite ``name`` como um argumento posicional e ``'name'`` como uma chave "
+"Mas usando ``/`` (argumentos somente-posicionais), isso é possível já que "
+"permite ``nome`` como um argumento posicional e ``'nome'`` como uma chave "
 "nos argumentos nomeados::"
 
 #: ../../tutorial/controlflow.rst:677
