--- a/tutorial/index.po
+++ b/tutorial/index.po
@@ -19,16 +19,16 @@ msgstr ""
 "Last-Translator: Rafael Fontenelle <rffontenelle@gmail.com>, 2023\n"
 "Language-Team: Portuguese (Brazil) (https://app.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pt_BR\n"
 "Plural-Forms: nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % "
 "1000000 == 0 ? 1 : 2;\n"
 
 #: ../../tutorial/index.rst:5
 msgid "The Python Tutorial"
-msgstr "O tutorial de Python"
+msgstr "O tutorial do Python"
 
 #: ../../tutorial/index.rst:7
 msgid ""
@@ -40,10 +40,10 @@ msgid ""
 msgstr ""
 "Python é uma linguagem fácil de aprender e poderosa. Ela tem estruturas de "
 "dados de alto nível eficientes e uma abordagem simples mas efetiva de "
-"programação orientada a objetos. A elegância de sintaxe e a tipagem dinâmica "
-"de Python aliadas com sua natureza interpretativa, o fazem a linguagem ideal "
-"para programas e desenvolvimento de aplicações rápidas em diversas áreas e "
-"na maioria das plataformas."
+"programação orientada a objetos. A sintaxe elegante e a tipagem dinâmica do "
+"Python, aliadas com sua natureza interpretativa, o tornam uma linguagem "
+"ideal para fazer scripts e desenvolvimento de aplicações rápidas em diversas "
+"áreas e na maioria das plataformas."
 
 #: ../../tutorial/index.rst:13
 msgid ""
@@ -66,9 +66,9 @@ msgid ""
 "implemented in C or C++ (or other languages callable from C). Python is also "
 "suitable as an extension language for customizable applications."
 msgstr ""
-"O interpretador Python pode ser facilmente estendido com novas funções e "
-"tipos de dados implementados em C ou C++ (ou outras linguagens chamadas a "
-"partir de C). Python também é adequada como uma linguagem de extensão para "
+"O interpretador do Python pode ser facilmente estendido com novas funções e "
+"tipos de dados implementados em C ou C++ (ou outras linguagens chamáveis a "
+"partir de C). Python também é adequado como uma linguagem de extensão para "
 "aplicações personalizáveis."
 
 #: ../../tutorial/index.rst:23
@@ -93,7 +93,7 @@ msgid ""
 msgstr ""
 "Para uma descrição detalhada dos módulos e objetos padrões, veja :ref:"
 "`library-index`. Em :ref:`reference-index` você encontra uma definição mais "
-"formal da linguagem. Para escrever extensões em C ou C++ leia :ref:"
+"formal da linguagem. Para escrever extensões em C ou C++, leia :ref:"
 "`extending-index` e :ref:`c-api-index`. Existe também uma série de livros "
 "que cobrem Python em profundidade."
 
