--- a/tutorial/stdlib.po
+++ b/tutorial/stdlib.po
@@ -20,10 +20,10 @@ msgstr ""
 "Last-Translator: Rafael Fontenelle <rffontenelle@gmail.com>, 2024\n"
 "Language-Team: Portuguese (Brazil) (https://app.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pt_BR\n"
 "Plural-Forms: nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % "
 "1000000 == 0 ? 1 : 2;\n"
 
@@ -113,9 +113,9 @@ msgid ""
 "txt``, the script sets ``args.lines`` to ``5`` and ``args.filenames`` to "
 "``['alpha.txt', 'beta.txt']``."
 msgstr ""
-"Quando executada a linha de comando ``python top.py --lines=5 alpha.txt beta."
-"txt``, o script define ``args.lines`` para ``5`` e ``args.filenames`` para "
-"``['alpha.txt', 'beta.txt']``."
+"Quando executada na linha de comando ``python topo.py --linhas=5 alfa.txt "
+"beta.txt``, o script define ``args.linhas`` para ``5`` e ``args.arquivos`` "
+"para ``['alfa.txt', 'beta.txt']``."
 
 #: ../../tutorial/stdlib.rst:96
 msgid "Error Output Redirection and Program Termination"
