--- a/whatsnew/2.3.po
+++ b/whatsnew/2.3.po
@@ -21,10 +21,10 @@ msgstr ""
 "Last-Translator: Rafael Fontenelle <rffontenelle@gmail.com>, 2024\n"
 "Language-Team: Portuguese (Brazil) (https://app.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pt_BR\n"
 "Plural-Forms: nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % "
 "1000000 == 0 ? 1 : 2;\n"
 
@@ -847,18 +847,18 @@ msgstr "PEP 293: Codec Error Handling Callbacks"
 msgid ""
 "When encoding a Unicode string into a byte string, unencodable characters "
 "may be encountered.  So far, Python has allowed specifying the error "
-"processing as either \"strict\" (raising :exc:`UnicodeError`), "
-"\"ignore\" (skipping the character), or \"replace\" (using a question mark "
-"in the output string), with \"strict\" being the default behavior. It may be "
+"processing as either \"strict\" (raising :exc:`UnicodeError`), \"ignore\" "
+"(skipping the character), or \"replace\" (using a question mark in the "
+"output string), with \"strict\" being the default behavior. It may be "
 "desirable to specify alternative processing of such errors, such as "
 "inserting an XML character reference or HTML entity reference into the "
 "converted string."
 msgstr ""
 "When encoding a Unicode string into a byte string, unencodable characters "
 "may be encountered.  So far, Python has allowed specifying the error "
-"processing as either \"strict\" (raising :exc:`UnicodeError`), "
-"\"ignore\" (skipping the character), or \"replace\" (using a question mark "
-"in the output string), with \"strict\" being the default behavior. It may be "
+"processing as either \"strict\" (raising :exc:`UnicodeError`), \"ignore\" "
+"(skipping the character), or \"replace\" (using a question mark in the "
+"output string), with \"strict\" being the default behavior. It may be "
 "desirable to specify alternative processing of such errors, such as "
 "inserting an XML character reference or HTML entity reference into the "
 "converted string."
@@ -2544,7 +2544,7 @@ msgstr "Mudanças a construções e API C"
 
 #: ../../whatsnew/2.3.rst:1878
 msgid "Changes to Python's build process and to the C API include:"
-msgstr "Changes to Python's build process and to the C API include:"
+msgstr "As alterações no processo de construção do Python e na API C incluem:"
 
 #: ../../whatsnew/2.3.rst:1880
 msgid ""
