--- a/whatsnew/3.3.po
+++ b/whatsnew/3.3.po
@@ -25,10 +25,10 @@ msgstr ""
 "Last-Translator: Alfredo Braga <alfredorodruguesbraga@gmail.com>, 2024\n"
 "Language-Team: Portuguese (Brazil) (https://app.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pt_BR\n"
 "Plural-Forms: nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % "
 "1000000 == 0 ? 1 : 2;\n"
 
@@ -398,7 +398,7 @@ msgstr ""
 
 #: ../../whatsnew/3.3.rst:259
 msgid "Performance and resource usage"
-msgstr "Performace e utilização de recursos"
+msgstr "Desempenho e utilização de recursos"
 
 #: ../../whatsnew/3.3.rst:261
 msgid ""
@@ -1004,7 +1004,7 @@ msgstr "Outras mudanças na linguagem"
 
 #: ../../whatsnew/3.3.rst:778
 msgid "Some smaller changes made to the core Python language are:"
-msgstr "Alguma das mudanças menores feitas no núcleo da linguagem Python são:"
+msgstr "Algumas das mudanças menores feitas no núcleo da linguagem Python são:"
 
 #: ../../whatsnew/3.3.rst:780
 msgid ""
@@ -3201,7 +3201,7 @@ msgstr "Mudanças a construções e API C"
 
 #: ../../whatsnew/3.3.rst:2171
 msgid "Changes to Python's build process and to the C API include:"
-msgstr "Changes to Python's build process and to the C API include:"
+msgstr "As alterações no processo de construção do Python e na API C incluem:"
 
 #: ../../whatsnew/3.3.rst:2173
 msgid "New :pep:`3118` related function:"
