--- a/whatsnew/3.7.po
+++ b/whatsnew/3.7.po
@@ -25,10 +25,10 @@ msgstr ""
 "Last-Translator: Rafael Fontenelle <rffontenelle@gmail.com>, 2024\n"
 "Language-Team: Portuguese (Brazil) (https://app.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pt_BR\n"
 "Plural-Forms: nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % "
 "1000000 == 0 ? 1 : 2;\n"
 
@@ -1411,7 +1411,7 @@ msgstr ""
 "transporte. Além disso, chamadas para :meth:`ReadTransport.resume_reading() "
 "<asyncio.ReadTransport.resume_reading>` e :meth:`ReadTransport."
 "pause_reading() <asyncio.ReadTransport.pause_reading>` agora são "
-"idempotentes. (Contribuído por Yury Selivanov em :issue:`32356`.)"
+"idempotentes. (Contribuição de Yury Selivanov em :issue:`32356`.)"
 
 #: ../../whatsnew/3.7.rst:759
 msgid ""
@@ -1719,7 +1719,7 @@ msgstr ""
 
 #: ../../whatsnew/3.7.rst:977
 msgid "idlelib and IDLE"
-msgstr "idlelib and IDLE"
+msgstr "idlelib e IDLE"
 
 #: ../../whatsnew/3.7.rst:979
 msgid ""
@@ -2855,7 +2855,7 @@ msgstr ""
 
 #: ../../whatsnew/3.7.rst:1744
 msgid "Build Changes"
-msgstr "Alterações de compilação"
+msgstr "Mudanças na construção"
 
 #: ../../whatsnew/3.7.rst:1746
 msgid ""
