--- a/whatsnew/3.8.po
+++ b/whatsnew/3.8.po
@@ -24,10 +24,10 @@ msgstr ""
 "Last-Translator: Rafael Fontenelle <rffontenelle@gmail.com>, 2024\n"
 "Language-Team: Portuguese (Brazil) (https://app.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pt_BR\n"
 "Plural-Forms: nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % "
 "1000000 == 0 ? 1 : 2;\n"
 
@@ -75,10 +75,10 @@ msgid ""
 "org/wiki/Walrus#/media/File:Pacific_Walrus_-_Bull_(8247646168).jpg>`_."
 msgstr ""
 "Existe uma nova sintaxe ``:=`` que atribui valores a variáveis como parte de "
-"uma expressão maior. É carinhosamente conhecido como \"o operador "
-"morsa\" (\"the walrus operator\", em inglês) devido à sua semelhança com `os "
-"olhos e presas de uma morsa <https://en.wikipedia.org/wiki/Walrus#/media/"
-"File:Pacific_Walrus_-_Bull_(8247646168).jpg>`_"
+"uma expressão maior. É carinhosamente conhecido como \"o operador morsa\" "
+"(\"the walrus operator\", em inglês) devido à sua semelhança com `os olhos e "
+"presas de uma morsa <https://en.wikipedia.org/wiki/Walrus#/media/File:"
+"Pacific_Walrus_-_Bull_(8247646168).jpg>`_"
 
 #: ../../whatsnew/3.8.rst:83
 msgid ""
