--- a/c-api/abstract.po
+++ b/c-api/abstract.po
@@ -16,10 +16,10 @@ msgstr ""
 "Last-Translator: Rafael Fontenelle <rffontenelle@gmail.com>, 2023\n"
 "Language-Team: Portuguese (Brazil) (https://app.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pt_BR\n"
 "Plural-Forms: nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % "
 "1000000 == 0 ? 1 : 2;\n"
 
@@ -34,11 +34,10 @@ msgid ""
 "or all sequence types).  When used on object types for which they do not "
 "apply, they will raise a Python exception."
 msgstr ""
-"As funções neste capítulo interagem com os objetos do Python "
-"independentemente do tipo deles ou com classes amplas dos tipos de objetos "
-"(por exemplo, todos os tipos numéricos ou todos os tipos de sequência). "
-"Quando usado nos tipos de objetos pros quais eles não se aplicam eles "
-"levantarão uma exceção no Python."
+"As funções neste capítulo interagem com objetos Python independentemente do "
+"seu tipo, ou com classes amplas de tipos de objetos (por exemplo, todos os "
+"tipos numéricos ou todos os tipos de sequência). Quando usadas em tipos de "
+"objetos para os quais não se aplicam, elas irão levantar uma exceção Python."
 
 #: ../../c-api/abstract.rst:14
 msgid ""
@@ -47,7 +46,6 @@ msgid ""
 "`PyList_New`, but whose items have not been set to some non-\\ ``NULL`` "
 "value yet."
 msgstr ""
-"Não é possível usar estas funções em objetos que não estão apropriadamente "
-"inicializados, tal como uma objeto de lista que foi criado por :c:func:"
-"`PyList_New`, mas cujos itens não foram definidos como algum valor não "
-"``NULL`` ainda."
+"Não é possível usar essas funções em objetos que não foram inicializados "
+"corretamente, como um objeto de lista criado por :c:func:`PyList_New`, mas "
+"cujos itens ainda não foram definidos para algum valor diferente de ``NULL``."
