--- a/c-api/intro.po
+++ b/c-api/intro.po
@@ -19,10 +19,10 @@ msgstr ""
 "Last-Translator: Rafael Fontenelle <rffontenelle@gmail.com>, 2024\n"
 "Language-Team: Portuguese (Brazil) (https://app.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pt_BR\n"
 "Plural-Forms: nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % "
 "1000000 == 0 ? 1 : 2;\n"
 
@@ -929,11 +929,11 @@ msgid ""
 "later, it must be set explicitly with a call to  ``PySys_SetArgvEx(argc, "
 "argv, updatepath)`` after the call to :c:func:`Py_Initialize`."
 msgstr ""
-":c:func:`Py_Initialize` não define a \"lista de argumentos de "
-"script\" (``sys.argv``). Se esta variável for necessária para o código "
-"Python que será executado posteriormente, ela deve ser definida "
-"explicitamente com uma chamada com ``PySys_SetArgvEx(argc, argv, "
-"updatepath)`` após a chamada de :c:func:`Py_Initialize`."
+":c:func:`Py_Initialize` não define a \"lista de argumentos de script\" "
+"(``sys.argv``). Se esta variável for necessária para o código Python que "
+"será executado posteriormente, ela deve ser definida explicitamente com uma "
+"chamada com ``PySys_SetArgvEx(argc, argv, updatepath)`` após a chamada de :c:"
+"func:`Py_Initialize`."
 
 #: ../../c-api/intro.rst:671
 msgid ""
