--- a/extending/windows.po
+++ b/extending/windows.po
@@ -18,10 +18,10 @@ msgstr ""
 "Last-Translator: Rafael Fontenelle <rffontenelle@gmail.com>, 2023\n"
 "Language-Team: Portuguese (Brazil) (https://app.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pt_BR\n"
 "Plural-Forms: nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % "
 "1000000 == 0 ? 1 : 2;\n"
 
@@ -197,10 +197,10 @@ msgid ""
 msgstr ""
 "Suponha que você esteja construindo dois módulos de carregamento dinâmico, B "
 "e C, que devem compartilhar outro bloco de código A. No Unix, você *não* "
-"passaria :file:`A.a` ao vinculador para :file:`B.so` e :file:`C.so`; isso "
-"faria com que fosse incluído duas vezes, para que B e C tivessem sua própria "
+"passaria :file:`A.a` ao ligador para :file:`B.so` e :file:`C.so`; isso faria "
+"com que fosse incluído duas vezes, para que B e C tivessem sua própria "
 "cópia. No Windows, a construção :file:`A.dll` também construirá :file:`A."
-"lib`. Você *passa* :file:`A.lib` ao vinculador para B e C. :file:`A.lib` não "
+"lib`. Você *passa* :file:`A.lib` ao ligador para B e C. :file:`A.lib` não "
 "contém código; apenas contém informações que serão usadas em tempo de "
 "execução para acessar o código de A."
 
@@ -237,8 +237,8 @@ msgid ""
 "spam), you could use these commands::"
 msgstr ""
 "Ao criar DLLs no Windows, você deve passar :file:`pythonXY.lib` para o "
-"vinculador. Para construir duas DLLs, spam e ni (que usa funções C "
-"encontradas em spam), você pode usar estes comandos::"
+"ligador. Para construir duas DLLs, spam e ni (que usa funções C encontradas "
+"em spam), você pode usar estes comandos::"
 
 #: ../../extending/windows.rst:119
 msgid ""
