--- a/howto/instrumentation.po
+++ b/howto/instrumentation.po
@@ -21,10 +21,10 @@ msgstr ""
 "Last-Translator: Rafael Fontenelle <rffontenelle@gmail.com>, 2024\n"
 "Language-Team: Portuguese (Brazil) (https://app.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pt_BR\n"
 "Plural-Forms: nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % "
 "1000000 == 0 ? 1 : 2;\n"
 
@@ -143,7 +143,7 @@ msgstr ""
 
 #: ../../howto/instrumentation.rst:86
 msgid "Sufficiently modern readelf can print the metadata::"
-msgstr "Um readelf moderno o suficiente pode imprimir os metadados::"
+msgstr "Um readelf moderno o suficiente pode exibir os metadados::"
 
 #: ../../howto/instrumentation.rst:123
 msgid ""
@@ -263,7 +263,7 @@ msgid ""
 "``$arg1`` : ``(const char *)`` filename, accessible using "
 "``user_string($arg1)``"
 msgstr ""
-"``$arg1`` : nome de arquivo ``(const char *)``, acessível usando "
+"``$arg1`` : nome de arquivo como ``(const char *)``, acessível usando "
 "``user_string($arg1)``"
 
 #: ../../howto/instrumentation.rst:286
@@ -296,8 +296,8 @@ msgid ""
 "triggered within C functions."
 msgstr ""
 "Este marcador indica que uma linha Python está prestes a ser executada. É o "
-"equivalente ao rastreamento linha por linha com um criador de perfil em "
-"Python. Ele não é acionado dentro de funções C."
+"equivalente ao rastreamento linha por linha com um perfilador Python. Ele "
+"não é acionado dentro de funções C."
 
 #: ../../howto/instrumentation.rst:305
 msgid "The arguments are the same as for :c:func:`function__entry`."
@@ -342,7 +342,7 @@ msgid ""
 msgstr ""
 "Dispara quando :func:`sys.audit` ou :c:func:`PySys_Audit` é chamada. "
 "``arg0`` é o nome do evento como string C, ``arg1`` é um ponteiro :c:type:"
-"`PyObject` para um objeto de tupla."
+"`PyObject` para um objeto tupla."
 
 #: ../../howto/instrumentation.rst:343
 msgid "SystemTap Tapsets"
