--- a/howto/logging.po
+++ b/howto/logging.po
@@ -27,10 +27,10 @@ msgstr ""
 "Last-Translator: Alfredo Braga <alfredorodruguesbraga@gmail.com>, 2024\n"
 "Language-Team: Portuguese (Brazil) (https://app.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pt_BR\n"
 "Plural-Forms: nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % "
 "1000000 == 0 ? 1 : 2;\n"
 
@@ -929,9 +929,8 @@ msgid ""
 "format, the severity of the message, and the contents of the message, in "
 "that order::"
 msgstr ""
-"A string de formatação a seguir ira escrever o tempo em um formato légivel "
-"para humanos, a severidade da mensagem, e o conteúdo da mensagem, nessa "
-"ordem::"
+"A string de formato a seguir vai escrever o tempo em um formato légivel para "
+"humanos, a severidade da mensagem, e o conteúdo da mensagem, nessa ordem::"
 
 #: ../../howto/logging.rst:564
 msgid ""
@@ -1181,9 +1180,9 @@ msgid ""
 "define a level with the same numeric value, it overwrites the predefined "
 "value; the predefined name is lost."
 msgstr ""
-"Os valores númericos dos níveis de loggins estão listados na tabela abaixo. "
+"Os valores númericos dos níveis de logging estão listados na tabela abaixo. "
 "Eles são principalmente de interesse se você quiser definir seus próprios "
-"níveis, e precisa deles para definir seus valores especificos relativos aos "
+"níveis, e precisa deles para definir seus valores específicos relativos aos "
 "níveis predefinidos. Se você define um nível com o mesmo valor númerico, ele "
 "sobreescreve o valor predefinido; o nome predefinido é perdido."
 
