--- a/howto/sockets.po
+++ b/howto/sockets.po
@@ -19,10 +19,10 @@ msgstr ""
 "Last-Translator: Rafael Fontenelle <rffontenelle@gmail.com>, 2024\n"
 "Language-Team: Portuguese (Brazil) (https://app.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pt_BR\n"
 "Plural-Forms: nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % "
 "1000000 == 0 ? 1 : 2;\n"
 
@@ -268,7 +268,7 @@ msgid ""
 "API."
 msgstr ""
 "A módulo :mod:`multiprocessing` faz a integração do IPC de forma "
-"multiplataforma numa API de nível superior."
+"multiplataforma numa API de nível mais alto."
 
 #: ../../howto/sockets.rst:134
 msgid "Using a Socket"
