--- a/tutorial/interpreter.po
+++ b/tutorial/interpreter.po
@@ -19,10 +19,10 @@ msgstr ""
 "Last-Translator: Rafael Fontenelle <rffontenelle@gmail.com>, 2024\n"
 "Language-Team: Portuguese (Brazil) (https://app.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pt_BR\n"
 "Plural-Forms: nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % "
 "1000000 == 0 ? 1 : 2;\n"
 
@@ -79,7 +79,7 @@ msgid ""
 "exit status.  If that doesn't work, you can exit the interpreter by typing "
 "the following command: ``quit()``."
 msgstr ""
-"Digitando um caractere de fim-de-arquivo (:kbd:`Control-D` no Unix, :kbd:"
+"Digitar um caractere de fim de arquivo (:kbd:`Control-D` no Unix, :kbd:"
 "`Control-Z` no Windows) diretamente no prompt força o interpretador a sair "
 "com status de saída zero. Se isso não funcionar, você pode sair do "
 "interpretador digitando o seguinte comando: ``quit()``."
