--- a/tutorial/introduction.po
+++ b/tutorial/introduction.po
@@ -20,10 +20,10 @@ msgstr ""
 "Last-Translator: Rafael Fontenelle <rffontenelle@gmail.com>, 2024\n"
 "Language-Team: Portuguese (Brazil) (https://app.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pt_BR\n"
 "Plural-Forms: nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % "
 "1000000 == 0 ? 1 : 2;\n"
 
@@ -60,9 +60,9 @@ msgid ""
 msgstr ""
 "Muitos exemplos neste manual, mesmo aqueles inscritos na linha de comando "
 "interativa, incluem comentários. Comentários em Python começam com o "
-"caractere cerquilha '#' e estende até o final da linha. Um comentário pode "
+"caractere cerquilha ``#`` e estende até o final da linha. Um comentário pode "
 "aparecer no inicio da linha ou após espaço em branco ou código, mas não "
-"dentro de uma string literal. O caracterer cerquilha dentro de uma string "
+"dentro de uma string literal. O caractere cerquilha dentro de uma string "
 "literal é apenas uma cerquilha. Como os comentários são para esclarecer o "
 "código e não são interpretados pelo Python, eles podem ser omitidos ao "
 "digitar exemplos."
