--- a/tutorial/stdlib2.po
+++ b/tutorial/stdlib2.po
@@ -17,10 +17,10 @@ msgstr ""
 "Last-Translator: Rafael Fontenelle <rffontenelle@gmail.com>, 2024\n"
 "Language-Team: Portuguese (Brazil) (https://app.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pt_BR\n"
 "Plural-Forms: nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % "
 "1000000 == 0 ? 1 : 2;\n"
 
@@ -285,9 +285,9 @@ msgid ""
 "shortly after the last reference to it has been eliminated."
 msgstr ""
 "Python faz gerenciamento automático de memória (contagem de referências para "
-"a maioria dos objetos e :term:`garbage collection <garbage collection>` "
-"[coleta de lixo] para eliminar ciclos). A memória ocupada por um objeto é "
-"liberada logo depois da última referência a ele ser eliminada."
+"a maioria dos objetos e :term:`coleta de lixo <garbage collection>` para "
+"eliminar ciclos). A memória ocupada por um objeto é liberada logo depois da "
+"última referência a ele ser eliminada."
 
 #: ../../tutorial/stdlib2.rst:254
 msgid ""
@@ -307,7 +307,7 @@ msgstr ""
 "para rastrear objetos sem criar uma referência. Quando o objeto não é mais "
 "necessário, ele é automaticamente removido de uma tabela de referências "
 "fracas e uma chamada (*callback*) é disparada. Aplicações típicas incluem "
-"cacheamento de objetos que são muito custosos para criar::"
+"armazenamento em cache de objetos que são muito custosos para criar::"
 
 #: ../../tutorial/stdlib2.rst:289
 msgid "Tools for Working with Lists"
