--- a/whatsnew/2.1.po
+++ b/whatsnew/2.1.po
@@ -21,10 +21,10 @@ msgstr ""
 "Last-Translator: Rafael Fontenelle <rffontenelle@gmail.com>, 2024\n"
 "Language-Team: Portuguese (Brazil) (https://app.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pt_BR\n"
 "Plural-Forms: nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % "
 "1000000 == 0 ? 1 : 2;\n"
 
@@ -343,7 +343,7 @@ msgstr "Operação"
 
 #: ../../whatsnew/2.1.rst:179
 msgid "Method name"
-msgstr "Method name"
+msgstr "Nome do método"
 
 #: ../../whatsnew/2.1.rst:181
 msgid "``<``"
