--- a/whatsnew/2.5.po
+++ b/whatsnew/2.5.po
@@ -25,10 +25,10 @@ msgstr ""
 "Last-Translator: Rafael Fontenelle <rffontenelle@gmail.com>, 2024\n"
 "Language-Team: Portuguese (Brazil) (https://app.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pt_BR\n"
 "Plural-Forms: nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % "
 "1000000 == 0 ? 1 : 2;\n"
 
@@ -3350,7 +3350,7 @@ msgstr "Mudanças a construções e API C"
 
 #: ../../whatsnew/2.5.rst:2082
 msgid "Changes to Python's build process and to the C API include:"
-msgstr "Changes to Python's build process and to the C API include:"
+msgstr "As alterações no processo de construção do Python e na API C incluem:"
 
 #: ../../whatsnew/2.5.rst:2084
 msgid ""
