--- a/whatsnew/2.6.po
+++ b/whatsnew/2.6.po
@@ -22,10 +22,10 @@ msgstr ""
 "Last-Translator: Rafael Fontenelle <rffontenelle@gmail.com>, 2024\n"
 "Language-Team: Portuguese (Brazil) (https://app.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pt_BR\n"
 "Plural-Forms: nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % "
 "1000000 == 0 ? 1 : 2;\n"
 
@@ -2186,7 +2186,7 @@ msgstr "Outras mudanças na linguagem"
 
 #: ../../whatsnew/2.6.rst:1487
 msgid "Some smaller changes made to the core Python language are:"
-msgstr "Alguma das mudanças menores feitas no núcleo da linguagem Python são:"
+msgstr "Algumas das mudanças menores feitas no núcleo da linguagem Python são:"
 
 #: ../../whatsnew/2.6.rst:1489
 msgid ""
@@ -4642,7 +4642,7 @@ msgstr "Mudanças a construções e API C"
 
 #: ../../whatsnew/2.6.rst:2981
 msgid "Changes to Python's build process and to the C API include:"
-msgstr "Changes to Python's build process and to the C API include:"
+msgstr "As alterações no processo de construção do Python e na API C incluem:"
 
 #: ../../whatsnew/2.6.rst:2983
 msgid ""
