--- a/whatsnew/2.7.po
+++ b/whatsnew/2.7.po
@@ -21,10 +21,10 @@ msgstr ""
 "Last-Translator: Rafael Fontenelle <rffontenelle@gmail.com>, 2024\n"
 "Language-Team: Portuguese (Brazil) (https://app.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pt_BR\n"
 "Plural-Forms: nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % "
 "1000000 == 0 ? 1 : 2;\n"
 
@@ -949,7 +949,7 @@ msgstr "Outras mudanças na linguagem"
 
 #: ../../whatsnew/2.7.rst:674
 msgid "Some smaller changes made to the core Python language are:"
-msgstr "Alguma das mudanças menores feitas no núcleo da linguagem Python são:"
+msgstr "Algumas das mudanças menores feitas no núcleo da linguagem Python são:"
 
 #: ../../whatsnew/2.7.rst:676
 msgid ""
@@ -3461,24 +3461,24 @@ msgid ""
 "ElementTree's code for converting trees to a string has been significantly "
 "reworked, making it roughly twice as fast in many cases.  The :meth:"
 "`ElementTree.write() <xml.etree.ElementTree.ElementTree.write>` and :meth:"
-"`Element.write` methods now have a *method* parameter that can be "
-"\"xml\" (the default), \"html\", or \"text\".  HTML mode will output empty "
-"elements as ``<empty></empty>`` instead of ``<empty/>``, and text mode will "
-"skip over elements and only output the text chunks.  If you set the :attr:"
-"`tag` attribute of an element to ``None`` but leave its children in place, "
-"the element will be omitted when the tree is written out, so you don't need "
-"to do more extensive rearrangement to remove a single element."
+"`Element.write` methods now have a *method* parameter that can be \"xml\" "
+"(the default), \"html\", or \"text\".  HTML mode will output empty elements "
+"as ``<empty></empty>`` instead of ``<empty/>``, and text mode will skip over "
+"elements and only output the text chunks.  If you set the :attr:`tag` "
+"attribute of an element to ``None`` but leave its children in place, the "
+"element will be omitted when the tree is written out, so you don't need to "
+"do more extensive rearrangement to remove a single element."
 msgstr ""
 "ElementTree's code for converting trees to a string has been significantly "
 "reworked, making it roughly twice as fast in many cases. The :meth:"
 "`ElementTree.write() <xml.etree.ElementTree.ElementTree.write>` and :meth:"
-"`Element.write` methods now have a *method* parameter that can be "
-"\"xml\" (the default), \"html\", or \"text\". HTML mode will output empty "
-"elements as ``<empty></empty>`` instead of ``<empty/>``, and text mode will "
-"skip over elements and only output the text chunks. If you set the :attr:"
-"`tag` attribute of an element to ``None`` but leave its children in place, "
-"the element will be omitted when the tree is written out, so you don't need "
-"to do more extensive rearrangement to remove a single element."
+"`Element.write` methods now have a *method* parameter that can be \"xml\" "
+"(the default), \"html\", or \"text\". HTML mode will output empty elements "
+"as ``<empty></empty>`` instead of ``<empty/>``, and text mode will skip over "
+"elements and only output the text chunks. If you set the :attr:`tag` "
+"attribute of an element to ``None`` but leave its children in place, the "
+"element will be omitted when the tree is written out, so you don't need to "
+"do more extensive rearrangement to remove a single element."
 
 #: ../../whatsnew/2.7.rst:2039
 msgid ""
@@ -3566,7 +3566,7 @@ msgstr "Mudanças a construções e API C"
 
 #: ../../whatsnew/2.7.rst:2102
 msgid "Changes to Python's build process and to the C API include:"
-msgstr "Changes to Python's build process and to the C API include:"
+msgstr "As alterações no processo de construção do Python e na API C incluem:"
 
 #: ../../whatsnew/2.7.rst:2104
 msgid ""
