--- a/whatsnew/3.1.po
+++ b/whatsnew/3.1.po
@@ -20,10 +20,10 @@ msgstr ""
 "Last-Translator: Rafael Fontenelle <rffontenelle@gmail.com>, 2024\n"
 "Language-Team: Portuguese (Brazil) (https://app.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pt_BR\n"
 "Plural-Forms: nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % "
 "1000000 == 0 ? 1 : 2;\n"
 
@@ -163,7 +163,7 @@ msgstr "Outras mudanças na linguagem"
 
 #: ../../whatsnew/3.1.rst:118
 msgid "Some smaller changes made to the core Python language are:"
-msgstr "Alguma das mudanças menores feitas no núcleo da linguagem Python são:"
+msgstr "Algumas das mudanças menores feitas no núcleo da linguagem Python são:"
 
 #: ../../whatsnew/3.1.rst:120
 msgid ""
@@ -791,7 +791,7 @@ msgstr "Mudanças a construções e API C"
 
 #: ../../whatsnew/3.1.rst:475
 msgid "Changes to Python's build process and to the C API include:"
-msgstr "Changes to Python's build process and to the C API include:"
+msgstr "As alterações no processo de construção do Python e na API C incluem:"
 
 #: ../../whatsnew/3.1.rst:477
 msgid ""
