--- a/whatsnew/3.5.po
+++ b/whatsnew/3.5.po
@@ -23,10 +23,10 @@ msgstr ""
 "Last-Translator: Rafael Fontenelle <rffontenelle@gmail.com>, 2024\n"
 "Language-Team: Portuguese (Brazil) (https://app.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
+"Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: pt_BR\n"
 "Plural-Forms: nplurals=3; plural=(n == 0 || n == 1) ? 0 : n != 0 && n % "
 "1000000 == 0 ? 1 : 2;\n"
 
@@ -799,7 +799,7 @@ msgstr "Outras mudanças na linguagem"
 
 #: ../../whatsnew/3.5.rst:703
 msgid "Some smaller changes made to the core Python language are:"
-msgstr "Alguma das mudanças menores feitas no núcleo da linguagem Python são:"
+msgstr "Algumas das mudanças menores feitas no núcleo da linguagem Python são:"
 
 #: ../../whatsnew/3.5.rst:705
 msgid ""
@@ -1483,7 +1483,7 @@ msgstr ""
 
 #: ../../whatsnew/3.5.rst:1223
 msgid "idlelib and IDLE"
-msgstr "idlelib and IDLE"
+msgstr "idlelib e IDLE"
 
 #: ../../whatsnew/3.5.rst:1225
 msgid ""
